Add image preview functionality, update the blog items, increment the comment count increment the read count.

--- a/public/assets/frontend/css/main.css
+++ b/public/assets/frontend/css/main.css
@@ -10,3 +10,34 @@
 .image-input {
 	margin-bottom: 20px;
 }
+
+.image-preview {
+	border: 1px solid #ddd;
+	width: 250px;
+	height: 250px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+[type="file"] {
+  height: 0;  
+  width: 0;
+  overflow: hidden;
+}
+
+[type="file"] + label {
+  font-family: sans-serif;
+  background: red;
+  padding: 10px 30px;
+  border: 2px solid #f44336;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+[type="file"] + label:hover {
+  background-color: #fff;
+  color: #f44336;
+}
