update the admin management page - blog page.

--- a/public/assets/css/admin/blog.css
+++ b/public/assets/css/admin/blog.css
@@ -46,3 +46,12 @@
 .desc-width {
   min-width: 400px;
 }
+
+.back-btn {
+  float: right;
+  cursor: pointer;  
+}
+
+.back-btn:hover {
+  color: red;
+}
